--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		viewer.setFOV(60);
 		viewer.setPointBudget(0.1*1000*1000);
         viewer.setMinNodeSize(100);
-		<!-- viewer.loadSettingsFromURL(); -->
+		viewer.loadSettingsFromURL();
 		
 		viewer.setDescription("<p class='sitn-title'>Géoportail LiDAR du <a target='_blank' href='http://sitn.ne.ch/'>SITN</a></p>");
 		
