start implementing search_box

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>SITN LiDAR Viewer</title>
+    <title>Géoportail LiDAR du SITN</title>
 
 	<link rel="stylesheet" type="text/css" href="potree/build/potree/potree.css">
 	<link rel="stylesheet" type="text/css" href="potree/libs/jquery-ui/jquery-ui.min.css">
